# secmod

./: README.md  setup.cfg
src/secmod/: __init__.py
src/secmod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: module_one.py  test_secmod.py
