[bumpversion]
current_version = 0.1.0

[metadata]
name = secmod
version = 0.1.0
description = secure module interface
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = python, module, import, importlib
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
author = Simon Bauer
author_email = code@seimenadventure.de
url = https://github.com/cloasdata/secmod

[options]
zip_safe = False
include_package_data = True
package_dir = 
	= src
packages = find:
install_requires =
	importlib; python_version >= "3.10"

[options.packages.find]
where = src

[options.extras_require]
test = 
	pytest >= 7.0.0